# android-viotester

./: .editorconfig  .gitignore  .gitmodules  README.md  arrays.xml  build.gradle  configure.sh  gradle.properties  preferences.xml  reset.xml
.github/workflows/: build.yml
app/: build.gradle  dummy-google-services.json
app/src/arcore/: AndroidManifest.xml
app/src/arcore/java/org/example/viotester/arcore/: ARCoreActivity.java  BackgroundRenderer.java  DisplayRotationHelper.java
app/src/arcore/java/org/example/viotester/ext_ar/: TrackingProvider.java
app/src/arcoreandengine/: AndroidManifest.xml
app/src/arcoreandengine/java/org/example/viotester/: arcore  arengine
app/src/arcoreandengine/java/org/example/viotester/ext_ar/: TrackingProvider.java
app/src/arengine/: .gitignore  AndroidManifest.xml  assets
app/src/arengine/java/org/example/viotester/arengine/: AREngineActivity.java  BackgroundRenderer.java  DisplayRotationHelper.java
app/src/arengine/java/org/example/viotester/ext_ar/: TrackingProvider.java
app/src/debug/res/raw/: gps.csv  track.csv
app/src/main/: AndroidManifest.xml  assets  jniLibs
app/src/main/java/org/example/viotester/: AlgorithmActivity.java  AlgorithmRenderer.java  AlgorithmWorker.java  AssetCopier.java  CameraWorker.java  DataRecorder.java  FpsFilter.java  FrequencyMonitor.java  MainActivity.java  PermissionHelper.java  SettingsActivity.java  ShareListActivity.java  TrackingOutput.java
app/src/main/java/org/example/viotester/ext_ar/: EmptyTrackingProvider.java  Renderer.java  ShaderUtil.java
app/src/main/java/org/example/viotester/modules/: CalibrationActivity.java  DataCollectionActivity.java  GpuExampleActivity.java  MapOverlayActivity.java  TrackingActivity.java
app/src/main/jni/: CMakeLists.txt  algorithm_module.cpp  algorithm_module.hpp  algorithm_module_wrappers.cpp  algorithm_worker.cpp  always_assert.h  camera_worker.cpp  jniutil.hpp  logging.hpp  native_camera_session.cpp  native_camera_session.hpp
app/src/main/jni/modules/: camera_calibrator.cpp  gpu_examples.cpp  recorder.cpp
app/src/main/jni/opengl/: algorithm_renderer.cpp  algorithm_renderer.hpp  ar_renderer.cpp  ar_renderer.hpp  camera_renderer.cpp  camera_renderer.hpp  ext_ar_renderer.cpp  gpu_camera_adapter.cpp  gpu_camera_adapter.hpp  util.cpp  util.hpp
app/src/main/res/drawable/: rounded_box.xml
app/src/main/res/layout/: activity_main.xml  activity_share_list.xml  share_list_item.xml  viotester_map_view.xml  viotester_surface_view.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/xml/: root_preferences.xml  shared_file_paths.xml
app/src/noslam/java/org/example/viotester/ext_ar/: TrackingProvider.java
gradle/wrapper/: gradle-wrapper.properties
